--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "chart.js": "^4.3.2",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
+    "framer-motion": "^10.18.0",
     "gray-matter": "^4.0.3",
     "next": "13.4.12",
     "postcss": "8.4.27",
